# capo

./: .gitignore  .gitmodules  CMakeLists.txt  DepPrinter.cpp  MANIFEST.in  README.md  TypeAnnotations.h  build.py  build.sh  flake.nix  install.py  install.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
C/: artifact.json  build.py  conflict-analyzer-tests  install.py  run-ca-ex.sh  setup.py
C/LICENSES-3rd-party/: json-schema-spec
C/compliance/: cle_json.cpp  cle_json.h
C/conflict_analyzer/: __main__.py  clejson2zinc.py  compile.py  exceptions.py  functionArgs.txt  minizinc.py  node2lineNumber.txt  pdg2zinc.py  pdg_data.csv  pdg_instance.mzn  pdg_table.py  runConflictAnalyzer.sh  temp.bc  unify_pdg_svf.py  z3CA.py  z3CLE.py  z3PDG.py  z3Provenance.py
C/divider/: README.md  program_divider.py
C/divider/divider/src/: Annotation.cpp  CMakeLists.txt  Enclave.cpp  Main.cpp  Matcher.cpp  PPCallbacksClosure.cpp  Topology.cpp  Visitor.cpp
C/gedl/: CMakeLists.txt  Makefile  README.md  notes-refactoring-rpcgen.txt  rpc_generator.py
C/partitioner/: README.md
C/preprocessor/: __main__.py  colors.py  parsing.py  preprocess.py  preprocessor.py
Java/: JoanaUsageExample.jy  JoanaUsageExample.scm  LICENSE  README.md  class_spliter.jy  design-notes.md  java-closure-notes.txt  out.txt  parseUnsat.py  runCA.sh  setup.md  setup_deps  zincOuput.jy  zincOutput.jy
LICENSES/: json  llvm  networkx  pydot  python2.7  python3
LICENSES-3rd-party/: argparse
compliance/: Annotation.h  Cle.h  Makefile  Makefile.stitch  Makefile.verifier  Partition.cpp  Partition.h  Report.h  cle_json.cpp  cle_json.h  tags-from-verifier  util.cpp  util.h  verifier.cpp
conflict_analyzer/: README.md  __main__.py  clejson2zinc.py  compile.py  conflictAnalyzer.sh  conflictAnalyzerAll.sh  conflict_analyzer.py  exceptions.py  main.py  minizinc.py  preprocessor.py
divider/: README.md  program_divider.py
docs/: c-spec.md
example/: targeting.h
gedl/: CMakeLists.txt  GEDLSchema.json  IDLGenerator.py  Makefile  README.md  RPCGenerator.py  RPCGenerator_az.py  RPCGenerator_rk.py  RPCGenerator_ss.py  __main__.py
gedl/Orange/: Orange.c  Orange.h
gedl/Purple/: Purple.c
gedl/docs/: GEDL Documentation  GEDL Pseudocode  GEDL to do
gedl/heuristics/: mem.json  printf.json
gedl/include/: AccessInfoTracker.hpp  Attribute.hpp  Heuristics.hpp  ProgramDependencyGraph.hpp  SGXGenerator.hpp
gedl/schema/: gedl-schema.json  validate-gedl.py
gedl/schema/tests-negative/: 01-unexpected_size.json  03-occurs-no-lines.json
gedl/schema/tests-valid/: 00-Closure.gedl.json  01-ClosureComplex.gedl.json  02-string-size.json
gedl/src/: AccessInfoTracker.cpp  Heuristics.cpp  ProgramDependencyGraph.cpp  SGXGenerator.cpp
partitioner/: README.md
pdg/: DataDependencies.cpp  DependencyGraph.h  ProgramDependencies.cpp  ProgramDependencies.h
pdg-deprecated/: CMakeLists.txt  ControlDependencies.cpp  DepPrinter.cpp  FunctionWrapper.h  PDGHelper.cpp  README.md
preprocessor/: __main__.py  join_clemaps.py
quala/: TypeAnnotations.h  common.mk
src/: graph_helper.py  partitioner.h
(+2662 files in other folders)
