[metadata]
name = conflict_analyzer 
version = 0.0.1
author = "Benjamin Flin"
author_email = "benjamin.flin@peratonlabs.com" 
description = Conflict analyzer for CLOSURE toolcahin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaps-closure/capo
project_urls =
    Bug Tracker = https://github.com/gaps-closure/capo/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = conflict_analyzer 
python_requires = >=3.6

[options.entry_points]
console_scripts =
    conflict_analyzer = conflict_analyzer:conflict_analyzer.main