[metadata]
name = capo 
version = 0.0.1
author = "Benjamin Flin"
author_email = "benjamin.flin@peratonlabs.com" 
description = Compiler and Partitioner Optimizer (CAPO) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaps-closure/capo
project_urls =
    Bug Tracker = https://github.com/gaps-closure/capo/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = conflict_analyzer, divider
python_requires = >=3.6

[options.entry_points]
console_scripts =
    conflict_analyzer = conflict_analyzer:conflict_analyzer.main
    divider = divider:divider.main